# vim: set noexpandtab:

2012-07-03 Steve
	* Updated GRL and pileup files
	* Updated SUSY cross section file to 8TeV version
	* Fixed pileup weight usage for 1/fb
	* Updated to SUSYTools-00-01-02
	* Tagging SusyCommon-00-00-16

2012-07-05 Matt
	* Added two lepton triggers: EF_e12Tvh_loose1 and EF_mu13 following todays DiLepton trigger talk
	
2012-07-03 Steve
	* Added muon thetaPV, requested by Anyes (might not be needed)
	* Adding additional isolation variables
		* ptcone30
		* etcone30Corr
		* etcone30TopoCorr
	* Now getting d0, z0, and the errors from the corresponding lepton branches
	* Muon type and origin are now grabbed directly from muon branches
	* Tagging SusyCommon-00-00-15

2012-07-03 Matt
	* Adding additional isolation variable
	       * etcone30 for muons (needed for 2-lep iso soon)
	* Updating Photon selection to match SusyTools-00-01-00

2012-06-29 Steve
	* Updated submission scripts
		* They now use a common blacklist file
	* Code has been tested against latest MultiLep changes
		* Now uses SUSYTools-00-01-00
		* Updated photon branches/selection
	* Tagging SusyCommon-00-00-14

2012-06-27 Steve
	* Changed default lumi to 5312
		* Based on current GRLs. This will be updated again soon.
	* Update grid submission scripts
	* Tagging SusyCommon-00-00-13

2012-06-25 Steve
	* Added missing trigger: mu18_tight_mu8_EFFS
	* Tagging SusyCommon-00-00-12

2012-06-24 Steve
	* Added single lepton trigger matching for our dilepton triggers
	* This way we have more flexibility to implement the best logic later
	* Added event trigger flags to SusyD3PDAna and SusyNtMaker
	* Changed jet/met calibration to RefFinal (LC jets)
	* Updated submission scripts and sample lists
		* New dataSamples with data12 containers
		* New SusyNt DS naming convention by request
		* Added single top tchan samples
	* Tagging SusyCommon-00-00-11

2012-06-23 Steve
	* Updated the pileup file usage and lumi
	* Update mcSamples
	* Tagging SusyCommon-00-00-10

2012-06-22 Steve