@@ -4,7 +4,6 @@ mc12_8TeV.126893.Sherpa_CT10_lllnu_WZ.merge.NTUP_SUSY.e1243_s1469_s1470_r3542_r3
 
 mc12_8TeV.105200.McAtNloJimmy_CT10_ttbar_LeptonFilter.merge.NTUP_SUSY.e1193_s1469_s1470_r3542_r3549_p1032/	11550546
 
-
 mc12_8TeV.107650.AlpgenJimmy_AUET2CTEQ6L1_ZeeNp0.merge.NTUP_SUSY.e1218_s1469_s1470_r3542_r3549_p1032/		6604283
 mc12_8TeV.107651.AlpgenJimmy_AUET2CTEQ6L1_ZeeNp1.merge.NTUP_SUSY.e1218_s1469_s1470_r3542_r3549_p1032/		1329994
 mc12_8TeV.107652.AlpgenJimmy_AUET2CTEQ6L1_ZeeNp2.merge.NTUP_SUSY.e1218_s1469_s1470_r3542_r3549_p1032/		404798
@@ -46,3 +45,13 @@ mc12_8TeV.107705.AlpgenJimmy_AUET2CTEQ6L1_WtaunuNp5.merge.NTUP_SUSY.e1218_s1469_
 mc12_8TeV.117360.AcerMCPythia_AUET2BCTEQ6L1_singletop_tchan_e.merge.NTUP_SUSY.e1195_s1469_s1470_r3542_r3549_p1032/	289999
 mc12_8TeV.117361.AcerMCPythia_AUET2BCTEQ6L1_singletop_tchan_mu.merge.NTUP_SUSY.e1195_s1469_s1470_r3542_r3549_p1032/	299999
 mc12_8TeV.117362.AcerMCPythia_AUET2BCTEQ6L1_singletop_tchan_tau.merge.NTUP_SUSY.e1195_s1469_s1470_r3542_r3549_p1032/	299999
+
+mc12_8TeV.105921.McAtNloJimmy_AUET2CT10_WpWmenuenu.merge.NTUP_SUSY.e1223_s1469_s1470_r3542_r3549_p1032/		140982.0
+mc12_8TeV.105922.McAtNloJimmy_AUET2CT10_WpWmenumunu.merge.NTUP_SUSY.e1223_s1469_s1470_r3542_r3549_p1032/	140519.0
+mc12_8TeV.105923.McAtNloJimmy_AUET2CT10_WpWmenutaunu.merge.NTUP_SUSY.e1223_s1469_s1470_r3542_r3549_p1032/	141102.0
+mc12_8TeV.105924.McAtNloJimmy_AUET2CT10_WpWmmunuenu.merge.NTUP_SUSY.e1223_s1469_s1470_r3542_r3549_p1032/	140858.0
+mc12_8TeV.105925.McAtNloJimmy_AUET2CT10_WpWmmunumunu.merge.NTUP_SUSY.e1223_s1469_s1470_r3542_r3549_p1032/	139426.0
+mc12_8TeV.105926.McAtNloJimmy_AUET2CT10_WpWmmunutaunu.merge.NTUP_SUSY.e1223_s1469_s1470_r3542_r3549_p1032/	140396.0
+mc12_8TeV.105927.McAtNloJimmy_AUET2CT10_WpWmtaunuenu.merge.NTUP_SUSY.e1223_s1469_s1470_r3542_r3549_p1032/	140498.0
+mc12_8TeV.105928.McAtNloJimmy_AUET2CT10_WpWmtaunumunu.merge.NTUP_SUSY.e1223_s1469_s1470_r3542_r3549_p1032/	140869.0
+mc12_8TeV.105929.McAtNloJimmy_AUET2CT10_WpWmtaunutaunu.merge.NTUP_SUSY.e1223_s1469_s1470_r3542_r3549_p1032/	140535.0
