@@ -5,6 +5,7 @@
 	* Updated SUSY cross section file to 8TeV version
 	* Fixed pileup weight usage for 1/fb
 	* Updated to SUSYTools-00-01-02
+	* Updated grid scripts, mcSamples, and dataSamples
 	* Tagging SusyCommon-00-00-16
 
 2012-07-05 Matt
